<resources>
    <string name="app_name">Student Management</string>
    <string name="title_activity_show_all_students">ShowAllStudents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used in table -->
    <string name="mssv">MSSV</string>
    <string name="hoten">Họ và tên</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="diachi">Địa chỉ</string>

    <!-- Strings used in main activity -->
    <string name="init_random_data">Khởi tạo dữ liệu ngẫu nhiên</string>
    <string name="show_all_students">Xem danh sách sinh viên</string>
    <string name="quit">Thoát ứng dụng</string>
    <string name="sv_list">Danh sách sinh viên</string>
</resources>