<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:background="#fff"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ShowAllStudents">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:text="@string/sv_list"
            android:gravity="center"/>

        <TableLayout

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/mssvTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/mssv"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/hotenTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/hoten"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/ngaysinhTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/ngaysinh"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/diachiTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/diachi"
                    android:textAlignment="center"
                    android:textColor="#000" />

            </TableRow>
            <View
                android:layout_height="3dip"
                android:layout_width="match_parent"
                android:background="#ff0000"/>
        </TableLayout>

        <ListView
            android:id="@+id/records_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="16dp">

        </ListView>

    </LinearLayout>

</ScrollView>


</LinearLayout>
